IMPALA-4511: Add missing total_time_counter() to PFE::Exec()

Also add sanity check in debug build to catch this kind of bug in the
future.

Change-Id: Ifdd6c059bdf022303920720291ebb319a69d60ec
Reviewed-on: http://gerrit.cloudera.org:8080/5149
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Internal Jenkins